# GDUT-DJI

./: .gitignore  gnss_path.csv
basic_dev/archive/stage1_snapshot_20260317_160335/: Dockerfile  README.txt  docker-compose.yml  gnss_path_fast.csv  gnss_path_fast_aligned.csv  setup.bash  赛道3反向.csv  赛道3反向_smoothed.csv  赛道3反向_smoothed_yflip.csv  赛道3反向_smoothed_yflip_trimmed_preview.csv
basic_dev/archive/stage1_snapshot_20260317_160335/src/basic_dev/: CMakeLists.txt
basic_dev/archive/stage1_snapshot_20260317_160335/src/basic_dev/include/: basic_dev.hpp  kb_ctrl.hpp
basic_dev/archive/stage1_snapshot_20260317_160335/src/basic_dev/launch/: follow_view.rviz
basic_dev/archive/stage1_snapshot_20260317_160335/src/basic_dev/scripts/: capture_flight_session.py  drone_marker.py  log_flight.py  parse_stage2_log.py  record_waypoints.py  visualize_stage_paths.py
basic_dev/archive/stage1_snapshot_20260317_160335/src/basic_dev/src/: basic_dev.cpp  kb_ctrl.cpp
basic_dev/src/basic_dev/: CMakeLists.txt  package.xml
basic_dev/src/basic_dev/include/: basic_dev.hpp
basic_dev/src/basic_dev/launch/: follow_view.rviz  rviz_follow.launch  yaw_pid_debug.launch
basic_dev/src/basic_dev/scripts/: yaw_tuner.py
basic_dev/src/basic_dev/src/: 117s  basic-125s  basic_dev.cpp  dji-main备份
